# stark-squeeze

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  10bit_dictionary.json  CONFIGURATION.md  Cargo.toml  DEPLOYMENT.md  DOCKER_README.md  Dockerfile.backend  README.md  ascii_combinations  ascii_combinations.json  ascii_combinations.rs  binary_dictionary_10to3.json  config.json  convert_png.py  debug_binary_string.txt  debug_reconstructed_binary_string.txt  docker-compose.prod.yml  docker-compose.yml  file.png.b10t3  file.png.mapping.json  file.png.raw  file.png.txt  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  railway.json  test.txt  test_file.txt  test_mixed_chars_ascii.txt  tsconfig.json
code_backup/: cli.rs  cli_validation_tests.rs  main.rs
contracts/: .tool-versions  Scarb.toml  snfoundry.toml
contracts/src/: lib.cairo  tests.cairo
contracts/tests/: test_contract.cairo
docs/: ASCII_CONVERSION.md
examples/: ascii_conversion_example.rs  custom_dict.txt  custom_dictionary.rs  mapping_demo.rs
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: WalletConnect.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/hooks/: useUpload.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx  auth.tsx
indexer/: .env.example  apibara.config.ts  drizzle.config.ts  index.ts  package-lock.json  package.json
indexer/drizzle/: 0000_solid_stryfe.sql
indexer/drizzle/meta/: 0000_snapshot.json  _journal.json
indexer/indexers/: file-uploads.indexer.ts
indexer/lib/: constants.ts  contract-abi.ts  event-handlers.ts  schema.ts
js-v1/: .env.example  .gitignore  package-lock.json  tsconfig.json
js-v1/contracts/: Scarb.toml
js-v1/indexer/: express.ts  index.ts
js-v1/src/: index.ts
js-v1/src/decompression/: decompressWithBrotli.ts  index.ts
js-v1/src/io/: fileReader.ts  progressBar.ts
js-v1/src/reconstruction/: binaryToBuffer.ts  binaryToFile.ts
js-v1/src/utils/: splitBy5.ts
js-v1/test/io/: progressBar.test.ts
js-v1/test/reconstruction/: binarytobuffer.test.ts
nginx/: nginx.conf
output/: reconstructed_file1.txt  reconstructed_file2.txt
public/: index.html
rust-v2/: .gitignore  Cargo.toml  constants.rs  example.txt
rust-v2/src/: main.rs  progress.rs
scripts/: deploy-railway.sh  docker-build.sh  docker-deploy.sh  init-db.sql
src/: ascii_converter.rs  cli.rs  compression.rs  config.rs  dictionary.rs  encoding.rs  imageToBase64.ts  index.ts  ipfs_client.rs  lib.rs  main.rs  mapping.rs  progress.rs  server.rs  starknet_client.rs  utils.rs
src/compression/: applySecondDict.test.ts  applySecondDict.ts  binaryToDots.test.ts  binaryToDots.ts  compressWithBrotli.ts  index.ts
src/compression/v1/: applySecondDict.ts  binaryToDots.ts
src/constants/: dictionaries.ts
src/decompression/: decompressWithBrotli.ts  dotsToBinary.ts  index.ts  reverseSecondDict.ts
src/io/: fileReader.js  fileReader.ts
src/reconstruction/: binaryToBuffer.ts  saveDecompressedFile.ts
src/utils/: encryption.ts
test/compression/: applySecondDict.test.js  binarytodots.test.ts
test/compresssion/: applySecondDict.test.ts
test/decompression/: binarytodots.test.ts  compressWithBrotli.test.ts  dotsToBinary.test.ts
tests/: ascii_conversion_test.rs  cli_validation_tests.rs  test.rs
v2/: Cargo.toml  README.md
