[package]
name = "stark_squeeze"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI and input/output
clap = { version = "4.5.37", features = ["derive"] }
dialoguer = "0.11"
colored = "2.0"
indicatif = "0.17.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

# StarkNet interaction
starknet = "0.9" # Or latest available version

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Hashing for upload IDs
blake3 = "1.3"
sha2 = "0.10"

# URL utilities
url = "2.5.4"

# Compile-time hash maps
phf = { version = "0.11", features = ["macros"] }

# Environment variable support
dotenvy = "0.15"
