[package]
name = "stark_squeeze"
version = "0.1.0"
edition = "2021"
default-run = "stark_squeeze"

[dependencies]
indicatif = "0.17.11"
serde_json = "1.0.140"
phf = { version = "0.11", features = ["macros"] }
dialoguer = "0.11"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
# StarkNet interaction
starknet = "0.9" # Or latest available version

# Async runtime
tokio = { version = "1.0", features = ["full", "test-util"] }

# Hashing for upload IDs
blake3 = "1.3"
sha2 = "0.10"
url = "2.5.4"
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = "0.15"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.8.0"

[[example]]
name = "ascii_conversion"
path = "examples/ascii_conversion_example.rs"

[[example]]
name = "mapping_demo"
path = "examples/mapping_demo.rs"

