[package]
name = "stark_squeeze"
version = "0.1.0"
edition = "2021"
default-run = "stark_squeeze"

[dependencies]
indicatif = "0.17.11"
serde_json = "1.0.140"
dialoguer = "0.11"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
# StarkNet interaction
starknet = "0.9" # Or latest available version
reqwest = { version = "0.11", features = ["json", "multipart"] }
base64 = "0.21"

# Async runtime
tokio = { version = "1.0", features = ["full", "test-util"] }

# Hashing for upload IDs
sha2 = "0.10"
url = "2.5.4"
dotenvy = "0.15"
thiserror = "2.0.12"
hex = "0.4.3"
anyhow = "1"
lazy_static = "1.4"

# Web server dependencies
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
multipart = "0.18"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
 sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls" , "uuid"] }

[dev-dependencies]
tempfile = "3.8.0"

[[bin]]
name = "stark_squeeze"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"
