[package]
name = "stark-squeeze-v2"
version = "0.1.0"
edition = "2021"
description = "Super data compression techniques for StarkNet"
authors = ["StarkSqueeze Team"]
license = "MIT"

[dependencies]
# Core compression libraries
brotli = "3.4.0"
flate2 = "1.0.28"  # For gzip, deflate, etc.
lz4 = "1.24.0"
zstd = "0.13.0"

# Utilities and async
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
futures = "0.3.30"
once_cell = "1.19.0"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# CLI
clap = { version = "4.4.12", features = ["derive"] }

# Error handling
thiserror = "1.0.53"
anyhow = "1.0.77"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.4.0"
tempfile = "3.9.0"

[[bench]]
name = "compression_benchmarks"
harness = false
